# fr3wml_camera_gripper_master_class

./: CMakeLists.txt  package.xml
config/: pick_place_bottle_capsule_framework.yaml  scene_bottle_capsule.yaml
launch/: bringup_fr3wml_camera_gripper.launch.py  bringup_fr3wml_camera_gripper_scene.launch.py  bringup_pick_place.launch.py  bringup_pick_place_blind_framework.launch.py  view_fr_camera_gripper.launch.py
meshes/: suction_cap.stl
meshes/bottle/: bottle_50cL_reframed.stl
rviz/: config_fr_camera_gripper.rviz
src/: fr3wml_ik_test.cpp  pick_place_bottle_capsule_framework.cpp  pick_place_framework.cpp  scene_handling.cpp  scene_loader_bottle_capsule.cpp
urdf/: fr_camera_gripper.urdf.xacro
